--- a/picApp/client/global.css
+++ b/picApp/client/global.css
@@ -2,6 +2,12 @@
 .head1 {
   margin-left: 30px;
 }
+.password1 {
+  color: #000000;
+}
+.email1 {
+  color: #000000;
+}
 .btn {
   border: 0px transparent none;
 }
