--- a/picApp/client/global.css
+++ b/picApp/client/global.css
@@ -2,6 +2,13 @@
 .head1 {
   margin-left: 30px;
 }
+form {
+  width: 100%;
+  margin: 0 auto;
+}
+form input {
+  width: 100%;
+}
 .password1 {
   color: #000000;
 }
@@ -41,13 +48,17 @@
 
 .floatleft {
   text-align: left;
+  float: left;
 }
 .floatright {
   text-align: right;
+  float: right;
+  padding-right: 20px;
 }
 .heady {
   height: 70px;
   width: 100%;
+  min-width: 650px;
   background-color: #368bc1;
 }
 
@@ -55,6 +66,7 @@
   text-align:center;
 }
 .loginBox {
+  min-width: 150px;
   margin-top: 20px;
   margin-left: 40%;
   margin-right: 40%;
