--- a/picApp/client/global.css
+++ b/picApp/client/global.css
@@ -28,7 +28,6 @@ form input {
 
 }
 .butt1 {
-  margin-top: 10px;
   height: 50px;
   width: 90px;
   font-size: 30px;
@@ -37,7 +36,7 @@ form input {
   border-color: black;
 }
 .butt2 {
-  margin-top: 10px;
+  margin-top: 7px;
   height: 50px;
   width: 70px;
   color: white;
@@ -47,6 +46,7 @@ form input {
 }
 
 .floatleft {
+  margin-left: 10px;
   text-align: left;
   float: left;
 }
@@ -56,9 +56,8 @@ form input {
   padding-right: 20px;
 }
 .heady {
-  height: 70px;
+  padding: 5px;
   width: 100%;
-  min-width: 650px;
   background-color: #368bc1;
 }
 
